--- a/Qback/package.json
+++ b/Qback/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "oniochaapp",
+  "name": "qargo",
   "version": "1.0.0",
-  "description": "Buy, sell, swap any book you can imagine",
+  "description": "Find all the clothes to look good",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./app.js"
   },
   "keywords": [
-    "Bookstores in Ghana",
-    "books",
-    "bookstore",
-    "marketplace"
+    "Fashion store in Ghana",
+    "Clothes",
+    "shoes",
+    "makeup",
+    "beauty"
   ],
   "author": "David Quartz",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "uuid": "^8.3.1"
   }
 }
