--- a/Qback/package.json
+++ b/Qback/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "paystack-node": "^0.2.5",
     "uuid": "^8.3.1"
   }
 }
