--- a/Qfront/package.json
+++ b/Qfront/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-paystack": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
