--- a/Qback/package.json
+++ b/Qback/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.8",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "uuid": "^8.3.1"
