--- a/Qback/package.json
+++ b/Qback/package.json
@@ -16,6 +16,7 @@
   "author": "David Quartz",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "express-jwt": "^6.0.0",
     "express-validator": "^5.3.0",
     "formidable": "^1.2.2",
+    "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.8",
