--- a/Qback/package.json
+++ b/Qback/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^5.3.0",
+    "flutterwave-node-v3": "^1.0.6",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
