--- a/Qfront/package.json
+++ b/Qfront/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^16.13.1",
     "react-paystack": "^3.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "react-slick": "^0.27.11",
     "slick-carousel": "^1.8.1"
   },
