--- a/Qfront/package.json
+++ b/Qfront/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "oniocha-front",
-  "version": "0.1.0",
+  "name": "qargo-front",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
