--- a/Qback/package.json
+++ b/Qback/package.json
@@ -4,8 +4,8 @@
   "description": "Find all the clothes to look good",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./app.js",
-    "start:prod": "NODE_ENV=production nodemon ./app.js",
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb app.js"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "author": "David Quartz",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -32,9 +33,9 @@
     "mongoose": "^5.10.8",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.4",
     "slugify": "^1.4.6",
-    "uuid": "^8.3.1",
     "validator": "^13.1.17"
   },
   "devDependencies": {
