--- a/Qback/package.json
+++ b/Qback/package.json
@@ -25,9 +25,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
     "express-validator": "^5.3.0",
     "flutterwave-node-v3": "^1.0.6",
     "formidable": "^1.2.2",
+    "helmet": "^4.2.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.8",
@@ -36,7 +40,8 @@
     "nodemailer": "^6.4.16",
     "nodemon": "^2.0.4",
     "slugify": "^1.4.6",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "ndb": "^1.1.5"
