--- a/Qback/package.json
+++ b/Qback/package.json
@@ -38,12 +38,12 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.16",
-    "nodemon": "^2.0.4",
     "slugify": "^1.4.6",
     "validator": "^13.1.17",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "ndb": "^1.1.5"
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.6"
   }
 }
