--- a/Qfront/package.json
+++ b/Qfront/package.json
@@ -19,9 +19,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-paystack": "^3.0.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.27.11",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sass-loader": "^13.3.2",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5"
   }
 }
